[tool.poetry]
name = "devlprd"
version = "0.4.2"
description = "Daemon for managing integrations with the FATNM DEVLPR"
readme = "README.md"
authors = ["Ezra Boley <eboley@wisc.edu>"]
license = "MIT"
repository = "https://github.com/FANTM/devlprd"
documentation = "https://docs.getfantm.com"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
pyserial = "^3.5"
mypy = "^0.910"
pydevlpr-protocol = "^0.1.0"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
